2021-12-01 新增线程管理器